# paxos

./: .dockerignore  .travis.yml  ChangeLog.md  Dockerfile  LICENSE  README.md  docker-compose.yml  multi-ghc-travis.hs  paxos.cabal  paxos.lkshw  run.bat
src/: Acceptor.hs  Main.hs  Proposer.hs  Utils.hs
test/: AcceptorSpec.hs  MainSpec.hs  ProposerSpec.hs  Spec.hs  UtilsSpec.hs
