name: paxos
version: 0.1.0.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: m.rivas1@uni.brighton.ac.uk
synopsis: Paxos implementation
category: Network
author: Michel
extra-source-files:
    ChangeLog.md

executable paxos
    main-is: Main.hs
    build-depends:
        base >=4.8 && <4.10,
        network -any,
        retry -any
        QuickCheck -any,
        guid -any,
        split -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Proposer
    ghc-options: -O3 -threaded -with-rtsopts=-N

