name: paxos
version: 0.1.0.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: m.rivas1@uni.brighton.ac.uk
synopsis: Paxos implementation
category: Network
author: Michel
extra-source-files:
    ChangeLog.md
Tested-With: GHC==7.10.3

executable paxos
    main-is: Main.hs
    build-depends:
        base -any,
        network -any,
        guid -any,
        split -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Utils
        Proposer
    ghc-options: -O3 -threaded -with-rtsopts=-N

test-suite test
    ghc-options: -Wall
    default-extensions:  OverloadedStrings
    type: exitcode-stdio-1.0
    main-is: Specs.hs
    hs-source-dirs: test
    build-depends:       
        base,
        hspec,
        paxos
   default-language: Haskell2010